# FullstackTraining

./: .pre-commit-config.yaml  README.md  install-pre-commit.sh  package-lock.json
.github/workflows/: lint-grocery-store.yaml  lint-navbar.yaml  lint.yaml  pre-commit.yaml
Exercices/grocery-store/: .eslintrc.js  README.md  package-lock.json  package.json
Exercices/grocery-store/src/: App.js  App.tsx  FilterableProductTable.js  (+9 more)
Exercices/navbar/: devDependencies  package-lock.json  package.json
Exercises/CSS/: structure.html
Exercises/Quote-Me/: Specification.md
Exercises/cv/: cv.html  style.css
Exercises/grocery-store/: .eslintrc.js  package-lock.json  package.json
Exercises/navbar/: .eslintrc.yml  package-lock.json  package.json
Exercises/quote-me/: README.md  index.html  jest.config.ts  package-lock.json  package.json  specification.md  tsconfig.json
Exercises/quote-me/backend/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
Exercises/quote-me/backend/src/: main.py
Exercises/quote-me/backend/src/db/: dbApi.py  mock_db.py  protocol.py
Exercises/quote-me/backend/src/interfaces/: quote.py  user.py
Exercises/quote-me/backend/src/quote_me_backend/: main.py
Exercises/quote-me/backend/src/quote_me_backend/db/: dbApi.py  mock_db.py  protocol.py
Exercises/quote-me/backend/src/quote_me_backend/interfaces/: user.py
Exercises/quote-me/backend/tests/: test_main.py
Questions/append-to-head/: append-to-head.html
Questions/append_to_head/: append_to_head.html
Questions/splitting-html-src-files/: splitting-html-src.html
(+102 files in other folders)
