[project]
name = "quote_me_backend"
version = "0.0.1"
authors = [
  { name="Ben Sembira", email="ben.sembira.1@gmail.com" },
]
description = "The backend of the QuoteMe web app"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ben-sembira-1/FullstackTraining/"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
]
